--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p> "Welcome the world of Web development" </p>
+	<div> "Welcome the world of Web development" </div>
 
 
     <script type="text/javascript" src="./script.js">
